packages/rocket/rocket-0.5.0-rc.2/core/codegen/tests/ui-fail-nightly/uri_display_type_errors.stderr
error[E0277]: the trait bound `BadType: UriDisplay<rocket::http::uri::fmt::Query>` is not satisfied
   --> tests/ui-fail-nightly/uri_display_type_errors.rs:6:13
    |
6   | struct Bar1(BadType);
    |             ^^^^^^^ the trait `UriDisplay<rocket::http::uri::fmt::Query>` is not implemented for `BadType`
    |
    = help: the following other types implement trait `UriDisplay<P>`:
              <&T as UriDisplay<P>>
              <&mut T as UriDisplay<P>>
              <BTreeMap<K, V> as UriDisplay<rocket::http::uri::fmt::Query>>
              <Bar1 as UriDisplay<rocket::http::uri::fmt::Query>>
              <Bar2 as UriDisplay<rocket::http::uri::fmt::Query>>
              <Bar3 as UriDisplay<rocket::http::uri::fmt::Query>>
              <Bar4 as UriDisplay<rocket::http::uri::fmt::Query>>
              <Bar5 as UriDisplay<rocket::http::uri::fmt::Query>>
            and 48 others
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::fmt::Query>` for `&BadType`
note: required by a bound in `rocket::http::uri::fmt::Formatter::<'i, P>::write_value`
   --> $WORKSPACE/core/http/src/uri/fmt/formatter.rs
    |
    |     pub fn write_value<T: UriDisplay<P>>(&mut self, value: T) -> fmt::Result {
    |                           ^^^^^^^^^^^^^ required by this bound in `rocket::http::uri::fmt::Formatter::<'i, P>::write_value`

error[E0277]: the trait bound `BadType: UriDisplay<rocket::http::uri::fmt::Query>` is not satisfied
   --> tests/ui-fail-nightly/uri_display_type_errors.rs:10:5
    |
10  |     field: BadType,
    |     ^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::fmt::Query>` is not implemented for `BadType`
    |
    = help: the following other types implement trait `UriDisplay<P>`:
              <&T as UriDisplay<P>>
              <&mut T as UriDisplay<P>>
              <BTreeMap<K, V> as UriDisplay<rocket::http::uri::fmt::Query>>
              <Bar1 as UriDisplay<rocket::http::uri::fmt::Query>>
              <Bar2 as UriDisplay<rocket::http::uri::fmt::Query>>
              <Bar3 as UriDisplay<rocket::http::uri::fmt::Query>>
              <Bar4 as UriDisplay<rocket::http::uri::fmt::Query>>
              <Bar5 as UriDisplay<rocket::http::uri::fmt::Query>>
            and 48 others
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::fmt::Query>` for `&BadType`
note: required by a bound in `rocket::http::uri::fmt::Formatter::<'_, rocket::http::uri::fmt::Query>::write_named_value`
   --> $WORKSPACE/core/http/src/uri/fmt/formatter.rs
    |
    |     pub fn write_named_value<T: UriDisplay<Query>>(&mut self, name: &str, value: T) -> fmt::Result {
    |                                 ^^^^^^^^^^^^^^^^^ required by this bound in `rocket::http::uri::fmt::Formatter::<'_, rocket::http::uri::fmt::Query>::write_named_value`

error[E0277]: the trait bound `BadType: UriDisplay<rocket::http::uri::fmt::Query>` is not satisfied
   --> tests/ui-fail-nightly/uri_display_type_errors.rs:16:5
    |
16  |     bad: BadType,
    |     ^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::fmt::Query>` is not implemented for `BadType`
    |
    = help: the following other types implement trait `UriDisplay<P>`:
              <&T as UriDisplay<P>>
              <&mut T as UriDisplay<P>>
              <BTreeMap<K, V> as UriDisplay<rocket::http::uri::fmt::Query>>
              <Bar1 as UriDisplay<rocket::http::uri::fmt::Query>>
              <Bar2 as UriDisplay<rocket::http::uri::fmt::Query>>
              <Bar3 as UriDisplay<rocket::http::uri::fmt::Query>>
              <Bar4 as UriDisplay<rocket::http::uri::fmt::Query>>
              <Bar5 as UriDisplay<rocket::http::uri::fmt::Query>>
            and 48 others
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::fmt::Query>` for `&BadType`
note: required by a bound in `rocket::http::uri::fmt::Formatter::<'_, rocket::http::uri::fmt::Query>::write_named_value`
   --> $WORKSPACE/core/http/src/uri/fmt/formatter.rs
    |
    |     pub fn write_named_value<T: UriDisplay<Query>>(&mut self, name: &str, value: T) -> fmt::Result {
    |                                 ^^^^^^^^^^^^^^^^^ required by this bound in `rocket::http::uri::fmt::Formatter::<'_, rocket::http::uri::fmt::Query>::write_named_value`

error[E0277]: the trait bound `BadType: UriDisplay<rocket::http::uri::fmt::Query>` is not satisfied
   --> tests/ui-fail-nightly/uri_display_type_errors.rs:21:11
    |
21  |     Inner(BadType),
    |           ^^^^^^^ the trait `UriDisplay<rocket::http::uri::fmt::Query>` is not implemented for `BadType`
    |
    = help: the following other types implement trait `UriDisplay<P>`:
              <&T as UriDisplay<P>>
              <&mut T as UriDisplay<P>>
              <BTreeMap<K, V> as UriDisplay<rocket::http::uri::fmt::Query>>
              <Bar1 as UriDisplay<rocket::http::uri::fmt::Query>>
              <Bar2 as UriDisplay<rocket::http::uri::fmt::Query>>
              <Bar3 as UriDisplay<rocket::http::uri::fmt::Query>>
              <Bar4 as UriDisplay<rocket::http::uri::fmt::Query>>
              <Bar5 as UriDisplay<rocket::http::uri::fmt::Query>>
            and 48 others
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::fmt::Query>` for `&BadType`
    = note: 1 redundant requirement hidden
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::fmt::Query>` for `&&BadType`
note: required by a bound in `rocket::http::uri::fmt::Formatter::<'i, P>::write_value`
   --> $WORKSPACE/core/http/src/uri/fmt/formatter.rs
    |
    |     pub fn write_value<T: UriDisplay<P>>(&mut self, value: T) -> fmt::Result {
    |                           ^^^^^^^^^^^^^ required by this bound in `rocket::http::uri::fmt::Formatter::<'i, P>::write_value`

error[E0277]: the trait bound `BadType: UriDisplay<rocket::http::uri::fmt::Query>` is not satisfied
   --> tests/ui-fail-nightly/uri_display_type_errors.rs:27:9
    |
27  |         field: BadType,
    |         ^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::fmt::Query>` is not implemented for `BadType`
    |
    = help: the following other types implement trait `UriDisplay<P>`:
              <&T as UriDisplay<P>>
              <&mut T as UriDisplay<P>>
              <BTreeMap<K, V> as UriDisplay<rocket::http::uri::fmt::Query>>
              <Bar1 as UriDisplay<rocket::http::uri::fmt::Query>>
              <Bar2 as UriDisplay<rocket::http::uri::fmt::Query>>
              <Bar3 as UriDisplay<rocket::http::uri::fmt::Query>>
              <Bar4 as UriDisplay<rocket::http::uri::fmt::Query>>
              <Bar5 as UriDisplay<rocket::http::uri::fmt::Query>>
            and 48 others
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::fmt::Query>` for `&BadType`
    = note: 1 redundant requirement hidden
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::fmt::Query>` for `&&BadType`
note: required by a bound in `rocket::http::uri::fmt::Formatter::<'_, rocket::http::uri::fmt::Query>::write_named_value`
   --> $WORKSPACE/core/http/src/uri/fmt/formatter.rs
    |
    |     pub fn write_named_value<T: UriDisplay<Query>>(&mut self, name: &str, value: T) -> fmt::Result {
    |                                 ^^^^^^^^^^^^^^^^^ required by this bound in `rocket::http::uri::fmt::Formatter::<'_, rocket::http::uri::fmt::Query>::write_named_value`

error[E0277]: the trait bound `BadType: UriDisplay<rocket::http::uri::fmt::Query>` is not satisfied
   --> tests/ui-fail-nightly/uri_display_type_errors.rs:35:9
    |
35  |         other: BadType,
    |         ^^^^^^^^^^^^^^ the trait `UriDisplay<rocket::http::uri::fmt::Query>` is not implemented for `BadType`
    |
    = help: the following other types implement trait `UriDisplay<P>`:
              <&T as UriDisplay<P>>
              <&mut T as UriDisplay<P>>
              <BTreeMap<K, V> as UriDisplay<rocket::http::uri::fmt::Query>>
              <Bar1 as UriDisplay<rocket::http::uri::fmt::Query>>
              <Bar2 as UriDisplay<rocket::http::uri::fmt::Query>>
              <Bar3 as UriDisplay<rocket::http::uri::fmt::Query>>
              <Bar4 as UriDisplay<rocket::http::uri::fmt::Query>>
              <Bar5 as UriDisplay<rocket::http::uri::fmt::Query>>
            and 48 others
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::fmt::Query>` for `&BadType`
    = note: 1 redundant requirement hidden
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::fmt::Query>` for `&&BadType`
note: required by a bound in `rocket::http::uri::fmt::Formatter::<'_, rocket::http::uri::fmt::Query>::write_named_value`
   --> $WORKSPACE/core/http/src/uri/fmt/formatter.rs
    |
    |     pub fn write_named_value<T: UriDisplay<Query>>(&mut self, name: &str, value: T) -> fmt::Result {
    |                                 ^^^^^^^^^^^^^^^^^ required by this bound in `rocket::http::uri::fmt::Formatter::<'_, rocket::http::uri::fmt::Query>::write_named_value`

error[E0277]: the trait bound `BadType: UriDisplay<rocket::http::uri::fmt::Path>` is not satisfied
   --> tests/ui-fail-nightly/uri_display_type_errors.rs:40:12
    |
40  | struct Baz(BadType);
    |            ^^^^^^^ the trait `UriDisplay<rocket::http::uri::fmt::Path>` is not implemented for `BadType`
    |
    = help: the following other types implement trait `UriDisplay<P>`:
              <&T as UriDisplay<P>>
              <&mut T as UriDisplay<P>>
              <BTreeMap<K, V> as UriDisplay<rocket::http::uri::fmt::Query>>
              <Bar1 as UriDisplay<rocket::http::uri::fmt::Query>>
              <Bar2 as UriDisplay<rocket::http::uri::fmt::Query>>
              <Bar3 as UriDisplay<rocket::http::uri::fmt::Query>>
              <Bar4 as UriDisplay<rocket::http::uri::fmt::Query>>
              <Bar5 as UriDisplay<rocket::http::uri::fmt::Query>>
            and 48 others
    = note: required because of the requirements on the impl of `UriDisplay<rocket::http::uri::fmt::Path>` for `&BadType`
note: required by a bound in `rocket::http::uri::fmt::Formatter::<'i, P>::write_value`
   --> $WORKSPACE/core/http/src/uri/fmt/formatter.rs
    |
    |     pub fn write_value<T: UriDisplay<P>>(&mut self, value: T) -> fmt::Result {
    |                           ^^^^^^^^^^^^^ required by this bound in `rocket::http::uri::fmt::Formatter::<'i, P>::write_value`
